force-app/main/default/objects/RPA_API_values__c/RPA_API_values__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The id values for the robot API to use</description>
    <label>RPA API values</label>
</CustomObject>