force-app/main/default/objects/RPA_API_values__c/fields/Sergel_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Sergel_Email_Address__c</fullName>
    <label>Sergel Email Address</label>
    <type>Email</type>
</CustomField>