force-app/main/default/objects/RPA_API_values__c/fields/Sergel_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Sergel_Template_Id__c</fullName>
    <label>Sergel Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>