force-app/main/default/objects/RPA_API_values__c/fields/Web_Modul_CC_emails__c.field-meta.xml
<CustomField>
    <fullName>Web_Modul_CC_emails__c</fullName>
    <label>Web Modul CC emails</label>
    <length>200</length>
    <type>Text</type>
</CustomField>