force-app/main/default/objects/RPA_API_values__c/fields/Web_Modul_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Web_Modul_Template_Id__c</fullName>
    <description>The Id of the Web Modul template to use</description>
    <label>Web Modul Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>