force-app/main/default/objects/RPA_API_values__c/fields/WebModul_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>WebModul_Email_Address__c</fullName>
    <description>The email address for the web Modul emails</description>
    <label>WebModul Email Address</label>
    <type>Email</type>
</CustomField>